--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,10 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "config": "^3.3.6",
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
