--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,24 +4,18 @@ services:
   web:
     build:
       context: ./web
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile.prod
     ports:
       - 80:80
-    volumes:
-      - ./web:/web
-    command: ./docker-entrypoint.sh
 
   api:
     build:
       context: ./api
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile.prod
     ports:
       - 8080:8080
     environment:
       DB_URL: mongodb://db/monemu
-    volumes:
-      - ./api:/api
-    command: ./docker-entrypoint.sh
 
   db:
     image: mongo:4.0-xenial
