--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,25 +4,40 @@ services:
   web:
     build:
       context: ./web
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile.dev
     ports:
       - 80:80
+    volumes:
+      - ./web:/web
+    command: ./docker-entrypoint.sh
+    networks:
+      - frontend
 
   api:
     build:
       context: ./api
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile.dev
     ports:
       - 8080:8080
     environment:
       DB_URL: mongodb://db/monemu
+    volumes:
+      - ./api:/api
+    command: ./docker-entrypoint.sh
+    networks:
+      - backend
 
   db:
     image: mongo:4.0-xenial
-    ports:
-      - 27017:27017
+
     volumes:
       - monemu:/data/db
+    networks:
+      - backend
 
 volumes:
   monemu:
+
+networks:
+  frontend:
+  backend:
