--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -7,11 +7,11 @@ services:
       dockerfile: Dockerfile.prod
     environment:
       # Set to the port that your webapp listens on
-      VIRTUAL_PORT=80
+      VIRTUAL_PORT:80
       # Can be comma-separated list
-      VIRTUAL_HOST=monitoremulator.com
+      VIRTUAL_HOST:monitoremulator.com
       # The domain for the cert, can also be comma-separated
-      LETSENCRYPT_HOST=monitoremulator.com
+      LETSENCRYPT_HOST:monitoremulator.com
       # Your email for the cert
       LETSENCRYPT_EMAIL=tajantonius@gmail.com
 
@@ -22,13 +22,13 @@ services:
     environment:
       DB_URL: mongodb://db/monemu
       # Set to the port that your webapp listens on
-      VIRTUAL_PORT=80
+      VIRTUAL_PORT:8080
       # Can be comma-separated list
-      VIRTUAL_HOST=monitoremulator.com
+      VIRTUAL_HOST:monitoremulator.com
       # The domain for the cert, can also be comma-separated
-      LETSENCRYPT_HOST=monitoremulator.com
+      LETSENCRYPT_HOST:monitoremulator.com
       # Your email for the cert
-      LETSENCRYPT_EMAIL=tajantonius@gmail.com
+      LETSENCRYPT_EMAIL:tajantonius@gmail.com
 
   db:
     image: mongo:4.0-xenial
