--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -18,7 +18,7 @@ services:
     environment:
       DB_URL: mongodb://db/monemu
       VIRTUAL_PORT: 8080
-      VIRTUAL_HOST: monitoremulator.com
+      VIRTUAL_HOST: monitoremulator.com/api
       LETSENCRYPT_HOST: monitoremulator.com
       LETSENCRYPT_EMAIL: tajantonius@gmail.com
   db:
