--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -18,9 +18,7 @@ services:
     environment:
       DB_URL: mongodb://db/monemu
       VIRTUAL_PORT: 8080
-      VIRTUAL_HOST: monitoremulator.com
-      LETSENCRYPT_HOST: monitoremulator.com
-      LETSENCRYPT_EMAIL: tajantonius@gmail.com
+      VIRTUAL_HOST: api.monitoremulator.com
   db:
     image: mongo:4.0-xenial
     volumes:
