--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -1,7 +1,7 @@
 server {
-    listen       8080;
-    listen  [::]:8080;
-    server_name  localhost;
+    listen       80;
+    listen  [::]:80;
+    server_name  localhost monitoremulaton.com
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
