--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -19,6 +19,8 @@ services:
       DB_URL: mongodb://db/monemu
       VIRTUAL_PORT: 8080
       VIRTUAL_HOST: api.monitoremulator.com
+      LETSENCRYPT_HOST: api.monitoremulator.com
+      LETSENCRYPT_EMAIL: tajantonius@gmail.com
       
   db:
     image: mongo:4.0-xenial
